--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} 
-{% block title %} AnyCheck Fact Checker {% endblock %}
+{% block title %} AnyCheck AnyCheck: Intelligent Fact Verification {% endblock %}
 
 {% block main %}
 <div class="content-container">
@@ -22,7 +22,7 @@
             <textarea class="form-control" id="claim_box" rows="3" name="claim_box" placeholder="Make a claim...">{{ claim }}</textarea>
         </div>
 
-        <p id="recordingTitle" style="display: none;"><strong>Recording:</strong></p>
+        <p id="recordingTitle" style="display: none"><strong style="color: white">Recording:</strong></p>
         <ul id="recordingsList"></ul>
 
         {% if solution %}
@@ -40,9 +40,50 @@
             </div>
             {% endif %}
 
-            <div class="solution-output">
+            <!-- <div class="solution-output">
                 {{ solution }}
+            </div> -->
+            {% set solution_parts = solution.split("Sources:") %}
+            <div class="solution-output">
+                {{ solution_parts[0] }}
             </div>
+            {% if solution_parts[1] %}
+                <div class="sources-output">
+                    <p class="sources-title"><strong>Sources:</strong></p>
+                    {% set sources = solution_parts[1].split("]") %}
+                    {% for source in sources %}
+                        {% if source.strip() and not loop.first %}
+                            <div class="source-item">
+                                {% set source_info = source.split("[")[0] %}
+                                {% if source_info %}
+                                    {% set source_parts = source_info.split(":", 1) %}
+                                    <strong>{{ source_parts[0].strip() }}</strong> - 
+                                    {% if source_parts[1] %}
+                                        {% set url_start = source_parts[1].find('http') %}
+                                        {% if url_start != -1 %}
+                                            {% set text_before_url = source_parts[1][:url_start].strip() %}
+                                            {% set url_and_text_after = source_parts[1][url_start:] %}
+                                            {% set url_end = url_and_text_after.find(' ') %}
+                                            {% if url_end != -1 %}
+                                                {% set url = url_and_text_after[:url_end] %}
+                                                {% set text_after_url = url_and_text_after[url_end:] %}
+                                            {% else %}
+                                                {% set url = url_and_text_after.strip() %}
+                                                {% set text_after_url = '' %}
+                                            {% endif %}
+                                            {{ text_before_url }}
+                                            <a href="{{ url }}" target="_blank">{{ url }}</a>
+                                            {{ text_after_url }}
+                                        {% else %}
+                                            {{ source_parts[1].strip() }}
+                                        {% endif %}
+                                    {% endif %}
+                                {% endif %}
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            {% endif %}
         {% endif %}
 
         <button class="button-40" type="submit">Submit</button>
@@ -59,9 +100,9 @@
         </div>
 
         <div class="form-group">
-            <textarea class="form-control" id="essay_box" rows="3" name="essay_box" placeholder="Make a claim...">{{ essay }}</textarea>
+            <textarea class="form-control" id="essay_box" rows="3" name="essay_box" placeholder="Enter your essay...">{{ essay }}</textarea>
         </div>
-
+  
         <p id="uploadTitle" style="display: none;"><strong>Upload:</strong></p>
         <ul id="uploadList"></ul>
 
