--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,8 +26,27 @@
     <!-- Add Material-UI stylesheets and scripts here -->
   </head>
   <body data-form="{{ form }}">
-    {% include 'navbar.html' %}
-
-    <main class="container-fluid py-5">{% block main %}{% endblock %}</main>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #000000b3;"> 
+      <!-- 14b1c9 -->
+      <div class="container-fluid">
+        <!-- <a class="navbar-brand" href="/" style="font-weight: bold; color: #fff;">AnyCheck Fact Checker</a> -->
+        <a class="navbar-brand" href="/" style="font-weight: bold; color: #fff;">AnyCheck: Intelligent Fact Verification</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="/" style="color:white;">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about" style="color:white;">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  
+    <main class="container-fluid">{% block main %}{% endblock %}</main>
   </body>
 </html>
