--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,22 @@
 <nav
   class="border navbar navbar-expand-md navbar-light"
-  style="background-color: #14b1c9
-  "
+  style="background-color: #14b1c9; width: 100%; margin-top: 0px;"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" href="/" style="font-weight: bold; color: #fff;">AnyCheck Fact Checker</a>
+    <a class="navbar-brand" href="/" style="font-weight: bold; color: #fff;">AnyCheck: Intelligent Fact Verification</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" action="/about">About</a>
+        </li>
+        <!-- Add more navbar items here if needed -->
+      </ul>
+    </div>
   </div>
 </nav>
